Graphics Optimization of the v0.3(Note that previous 2 are also about Graphics Optim. not just general Optim.)